# secure_rf

./: .gitignore  Cargo.toml  Dockerfile  Project_README.txt  README.txt  entrypoint.sh  fold_1_trees_0.txt  fold_1_trees_1.txt  fold_2_trees_0.txt
ECG/fold1/: 100_fs_selection.csv  100_runtime.txt  100_sampling_selection.csv  100_trees.txt
ECG/fold2/: 100_fs_selection.csv  100_runtime.txt  100_sampling_selection.csv  100_trees.txt
breast_cancer_results/fold1/: fold_1_trees.txt  fs_selection.csv  sampling_selection.csv
settings/: Party0.toml  Party0_David.toml  Party1.toml  Party1_David.toml  TI.toml  TI_David.toml
src/: bit_decomposition.rs  comparison.rs  computing_party.rs  constants.rs  decision_tree.rs  discretize.rs  dot_product.rs  field_change.rs  lib.rs  main.rs  matrix_multiplication.rs  message.rs  multiplication.rs  or_xor.rs  protocol.rs  protocol_test.rs  random_forest.rs  thread_pool.rs  ti.rs  utils.rs
src/communicator/: Cargo.toml
src/communicator/src/: lib.rs
src/method/: Cargo.toml
src/method/src/: decision_tree.rs  lib.rs  random_forest.rs
src/party/: Cargo.toml
src/party/src/: computing_party.rs  lib.rs  ti.rs
src/protocol/: Cargo.toml
src/utils/: Cargo.toml
src/utils/src/: constants.rs  lib.rs  thread_pool.rs
test_data/: shared_fold_1_test-0.csv  shared_fold_1_test-1.csv  shared_fold_1_train-0.csv  shared_fold_1_train-1.csv  shared_fold_2_train-0.csv  shared_fold_2_train-1.csv  shared_fold_3_test-0.csv  shared_fold_3_test-1.csv  shared_fold_3_train-0.csv  shared_fold_3_train-1.csv  shared_fold_4_test-0.csv  shared_fold_4_test-1.csv  shared_fold_4_train-0.csv  shared_fold_4_train-1.csv  shared_fold_5_test-0.csv  shared_fold_5_test-1.csv  shared_fold_5_train-0.csv  shared_fold_5_train-1.csv
