[package]
name = "random_forest_rust"
version = "0.1.0"
authors = ["James Shen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.14"
config = "0.9.3"
csv = "1.1.1"
utils = {"version"="0.1",path="./src/utils/"}
party = {"version"="0.1",path="./src/party/"}
protocol = {"version"="0.1",path="./src/protocol/"}
communicator = {"version"="0.1",path="./src/communicator/"}
method = {"version"="0.1",path="./src/method/"}