[package]
name = "random_forest_rust"
version = "0.1.0"
authors = ["James Shen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5"
num = {version="0.2",features=["rand"]}
config = "0.9.3"
csv = "1.1.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.7.1"
amiquip = { version = "0.3", default-features = false }